--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -39,4 +39,8 @@ body {
   max-width: 1170px;
   margin: 0 auto;
   padding: 0 16px;
+
+  @media only screen and (max-width: 991px) {
+    padding: 0;
+  }
 }
