--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -1,6 +1,7 @@
 .chat {
   position: relative;
   width: 75%;
+  max-height: 100vh;
   padding: 0 3px;
   display: flex;
   flex-direction: column;
@@ -9,7 +10,7 @@
 
   @media only screen and (max-width: 767px) {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: absolute;
   }
 }
@@ -140,6 +141,23 @@
   padding: 20px;
 
   list-style: none;
+
+  overflow-y: auto;
+  scrollbar-color: #2f5970 #21353f;
+  scrollbar-width: auto;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+    height: auto;
+    border-radius: 4px; }
+
+  &::-webkit-scrollbar-track {
+    background: #21353f;
+    border-radius: 0; }
+
+  &::-webkit-scrollbar-thumb {
+    background: #2f5970;
+    border-radius: 4px; }
 }
 
 .chat__item {
