--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -111,7 +111,8 @@
     flex-grow: 1;
     padding: 10px 5px;
 
-    font-family: "Ubuntu", Arial, sans-serif;
+    font-size: inherit;
+    line-height: inherit;
     color: #ffffff;
 
     background-color: transparent;
@@ -124,6 +125,8 @@
   button {
     flex-shrink: 0;
     color: #ffffff;
+    font-size: inherit;
+    line-height: inherit;
 
     background-color: transparent;
     border: none;
