--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -104,7 +104,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
   }
 
   textarea {
@@ -124,6 +124,8 @@
 
   button {
     flex-shrink: 0;
+    padding: 10px 5px;
+
     color: #ffffff;
     font-size: inherit;
     line-height: inherit;
